--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               </div>
 
               <div class="resume-item">
-                <h4>SMP Negeri Tambakreja 10</h4>
+                <h4>SD Negeri Tambakreja 10</h4>
                 <h5>2011-2017</h5>
               </div>
               <!-- Edn Resume Item -->
